User-Service unit tests implemented